se añadio login.html y register.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>VibraNote</title>
 </head>
 <body>
+  <!-- Start menu navegacion -->
     <header>
         <div class="bg-gray-900">
             <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
@@ -103,6 +104,26 @@
             </div>
           </div>
     </header>
+  <!-- End menu navegacion -->
+
+  <!-- Start cabecera -->
+  <section>
+
+  </section>
+  <!-- End cabecera -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
