href de login y register

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     </ul>
                 </div>
                 <ul class="flex items-center hidden space-x-8 lg:flex">
-                    <li><a href="/" aria-label="Sign in" title="Sign in"
+                    <li><a href="login.html" aria-label="Sign in" title="Sign in"
                             class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Inciar Sesión</a></li>
                     <li>
-                        <a href="/"
+                        <a href="register.html"
                             class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-deep-purple-accent-400 hover:bg-deep-purple-accent-700 focus:shadow-outline focus:outline-none"
                             aria-label="Sign up" title="Sign up">
                             Registrarse
