se pusieron las imagenes como url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="shortcut icon" href="/img/iconomusica.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/iconomusica.png?alt=media&token=929219fa-2d1c-4314-9f44-21e295089378&_gl=1*r4fj76*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY2NDQuMTMuMC4w" type="image/x-icon">
     <title>VibraNote</title>
 </head>
 
@@ -19,7 +19,7 @@
                 <div class="relative flex items-center justify-between">
                     <div class="flex items-center">
                         <a href="/" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
-                            <img src="/img/logo.png" alt="">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w" alt="logo">
                             <!-- <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">VibraNote</span> -->
                         </a>
                         <ul class="flex items-center hidden space-x-8 lg:flex">
@@ -131,8 +131,8 @@
               </svg>
               <img
                 class="object-cover w-full h-56 rounded shadow-lg lg:rounded-none lg:shadow-none md:h-96 lg:h-full"
-                src="/img/tocadiscos-microfono.jpg"
-                alt=""
+                src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/tocadiscos-microfono.jpg?alt=media&token=02671b32-b18e-4c6e-b7f9-4b70f0ed745d&_gl=1*86np2*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY1ODkuMS4wLjA."
+                alt="imagen cabecera"
               />
             </div>
             <div class="relative flex flex-col items-start w-full max-w-xl px-4 mx-auto md:px-0 lg:px-8 lg:max-w-screen-xl">
@@ -172,7 +172,7 @@
         <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
           <div class="grid row-gap-10 mb-8 lg:grid-cols-6">
             <div class="grid grid-cols-2 gap-5 row-gap-8 lg:col-span-4 md:grid-cols-4">
-              <img src="/img/logo.png" alt="logo">
+              <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w" alt="logo">
               <div>
                 <p class="font-medium tracking-wide text-gray-300">Quienes Somos</p>
                 <ul class="mt-2 space-y-2">
@@ -206,7 +206,7 @@
               <div>
                 <p class="font-medium tracking-wide text-gray-300"></p>
                 <ul class="mt-2 space-y-2">
-                  <img src="/img/notadesol.png" alt="" width="100px">
+                  <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/notadesol.png?alt=media&token=d062354b-13a3-4090-a36b-9076babe46f7&_gl=1*10xsi7t*_ga*ODYwODY3MzE5LjE2OTg5Mjc5OTA.*_ga_CW55HF8NVT*MTY5ODkyNzk5MC4xLjEuMTY5ODkyODc2NC40Mi4wLjA." alt="nota de sol" width="100px">
                 </ul>
               </div>
             </div>
