--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="shortcut icon" href="/img/iconomusica.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/iconomusica.png?alt=media&token=929219fa-2d1c-4314-9f44-21e295089378&_gl=1*r4fj76*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY2NDQuMTMuMC4w" type="image/x-icon">
     <title>VibraNote</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                     <div class="relative flex items-center justify-between">
                         <div class="flex items-center">
                             <a href="/" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
-                                <img src="/img/logo.png" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w" alt="logo">
                                 <!-- <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">VibraNote</span> -->
                             </a>
                             <ul class="flex items-center hidden space-x-8 lg:flex">
@@ -120,7 +120,7 @@
         <!-- Start contenido -->
         <section>
             <div class="relative">
-                <img src="/img/audifonos-parlante.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
+                <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/audifonos-parlante.jpg?alt=media&token=b41ec5e4-4352-4e15-8894-b34b7d626462&_gl=1*11cpnx2*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY5NzEuMzAuMC4w" class="absolute inset-0 object-cover w-full h-full" alt="imagen cabecera login" />
                 <div class="relative bg-opacity-75 bg-deep-purple-accent-700">
                   <svg class="absolute inset-x-0 bottom-0 text-white" viewBox="0 0 1160 163">
                     <path
@@ -216,7 +216,7 @@
             <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
               <div class="grid row-gap-10 mb-8 lg:grid-cols-6">
                 <div class="grid grid-cols-2 gap-5 row-gap-8 lg:col-span-4 md:grid-cols-4">
-                  <img src="/img/logo.png" alt="logo">
+                  <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w" alt="logo">
                   <div>
                     <p class="font-medium tracking-wide text-gray-300">Quienes Somos</p>
                     <ul class="mt-2 space-y-2">
@@ -250,7 +250,7 @@
                   <div>
                     <p class="font-medium tracking-wide text-gray-300"></p>
                     <ul class="mt-2 space-y-2">
-                      <img src="/img/notadesol.png" alt="" width="100px">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/notadesol.png?alt=media&token=d062354b-13a3-4090-a36b-9076babe46f7&_gl=1*10xsi7t*_ga*ODYwODY3MzE5LjE2OTg5Mjc5OTA.*_ga_CW55HF8NVT*MTY5ODkyNzk5MC4xLjEuMTY5ODkyODc2NC40Mi4wLjA." alt="nota de sol" width="100px">
                     </ul>
                   </div>
                 </div>
