se creo register y se modifico index

--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
                   <div class="relative px-4 py-16 mx-auto overflow-hidden sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
                     <div class="flex flex-col items-center justify-between xl:flex-row">
                       <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
-                        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-gray-700 sm:text-4xl sm:leading-none">
+                        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-indigo-600 sm:text-4xl sm:leading-none">
                           VibraNote <br class="hidden md:block" />
                           Disfruta de todo nuestro contenido
                         </h2>
@@ -220,7 +220,7 @@
                   <div>
                     <p class="font-medium tracking-wide text-gray-300">Quienes Somos</p>
                     <ul class="mt-2 space-y-2">
-                      <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, pariatur! Quasi impedit ea debitis minus vitae, voluptatibus id adipisci alias.</p>
+                      <p class="text-gray-500">Somos un equipo apasionado por la música, dedicados a compartir y promover diversos géneros y artistas. Únete a nosotros para descubrir nuevos sonidos y sumérgete en el maravilloso mundo de la música. ¡Siente el ritmo con nosotros!</p>
                     </ul>
                   </div>
                   <div>
