--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
             <div class="relative flex flex-col items-start w-full max-w-xl px-4 mx-auto md:px-0 lg:px-8 lg:max-w-screen-xl">
               <div class="mb-16 lg:my-40 lg:max-w-lg lg:pr-5">
                 <p class="inline-block px-3 py-px mb-4 text-xs font-semibold tracking-wider text-teal-900 uppercase rounded-full bg-teal-accent-400">
-                  Brand new
+                  VibraNote
                 </p>
                 <h2 class="mb-5 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none">
-                  Everything you<br class="hidden md:block" />
-                  can imagine
-                  <span class="inline-block text-deep-purple-accent-400">is real</span>
+                  Todo lo que<br class="hidden md:block" />
+                  puedas imaginar
+                  <span class="inline-block text-deep-purple-accent-400">es real</span>
                 </h2>
                 <p class="pr-5 mb-5 text-base text-gray-700 md:text-lg">
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae. explicabo.
+                  Descubre el ritmo que mueve tu corazón: explora nuestro mundo de música y encuentra tu melodía perfecta.
                 </p>
                 <!-- <div class="flex items-center">
                   <a
@@ -176,7 +176,7 @@
               <div>
                 <p class="font-medium tracking-wide text-gray-300">Quienes Somos</p>
                 <ul class="mt-2 space-y-2">
-                  <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, pariatur! Quasi impedit ea debitis minus vitae, voluptatibus id adipisci alias.</p>
+                  <p class="text-gray-500">Somos un equipo apasionado por la música, dedicados a compartir y promover diversos géneros y artistas. Únete a nosotros para descubrir nuevos sonidos y sumérgete en el maravilloso mundo de la música. ¡Siente el ritmo con nosotros!</p>
                 </ul>
               </div>
               <div>
