--- a/register.html
+++ b/register.html
@@ -27,9 +27,9 @@
                                 <li><a href="/" aria-label="Sobre Nosotros" title="Sobre Nosotros"
                                         class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Sobre Nosotros</a>
                                 </li>
-                                <li><a href="/" aria-label="Precios" title="Precios"
+                                <!-- <li><a href="/" aria-label="Precios" title="Precios"
                                         class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Precios</a>
-                                </li>
+                                </li> -->
                                 <li><a href="/" aria-label="Boletin Informativo" title="Boletin Informativo"
                                         class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Boletin Informativo</a>
                                 </li>
