se creo contact y aboutus

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                             <!-- <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">VibraNote</span> -->
                         </a>
                         <ul class="flex items-center hidden space-x-8 lg:flex">
-                            <li><a href="/" aria-label="Inicio" title="Inicio"
+                            <li><a href="index.html" aria-label="Inicio" title="Inicio"
                                     class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Inicio</a>
                             </li>
-                            <li><a href="/" aria-label="Sobre Nosotros" title="Sobre Nosotros"
+                            <li><a href="aboutus.html" aria-label="Sobre Nosotros" title="Sobre Nosotros"
                                     class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Sobre Nosotros</a>
                             </li>
                             <!-- <li><a href="/" aria-label="Precios" title="Precios"
                                     class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Precios</a>
                             </li> -->
-                            <li><a href="/" aria-label="Boletin Informativo" title="Boletin Informativo"
-                                    class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Boletin Informativo</a>
+                            <li><a href="blog.html" aria-label="Boletin Informativo" title="Boletin Informativo"
+                                    class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Blog</a>
                             </li>
-                            <li><a href="/" aria-label="About us" title="Contacto"
+                            <li><a href="contact.html" aria-label="About us" title="Contacto"
                                     class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Contacto</a></li>
                         </ul>
                     </div>
