--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
                   <div class="relative px-4 py-16 mx-auto overflow-hidden sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
                     <div class="flex flex-col items-center justify-between xl:flex-row">
                       <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
-                        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-indigo-600 sm:text-4xl sm:leading-none">
+                        <h2 class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-purple-900 sm:text-4xl sm:leading-none">
                           VibraNote <br class="hidden md:block" />
                           Disfruta de todo nuestro contenido
                         </h2>
