se hizo un cambio en menu

--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
               <!-- <li><a href="/" aria-label="Precios" title="Precios"
                                         class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Precios</a>
                                 </li> -->
-              <li><a href="blog.html" aria-label="Boletin Informativo" title="Boletin Informativo"
+              <li><a href="blog.html" aria-label="Boletin Informativo" title="Blog"
                   class="font-medium tracking-wide text-gray-100 transition-colors duration-200 hover:text-teal-accent-400">Blog</a>
               </li>
               <li><a href="contact.html" aria-label="About us" title="Contacto"
