--- a/aboutus.html
+++ b/aboutus.html
@@ -235,7 +235,7 @@
             </div>
           </div>
           <div class="overflow-hidden transition-shadow duration-300 bg-white rounded shadow-sm">
-            <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" class="object-cover w-full h-64" alt="" />
+            <img src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/woman-play-guitar-write-musica-cancion-reheaesal.jpg?alt=media&token=10d92830-3c28-46f4-a354-ee2f0ce72bbf" class="object-cover w-full h-64" alt="" />
             <div class="p-5 border border-t-0">
               <p class="mb-3 text-xs font-semibold tracking-wide uppercase">
                 <!-- <a href="/" class="transition-colors duration-200 text-blue-gray-900 hover:text-deep-purple-accent-700" aria-label="Category" title="traveling">traveling</a>
