--- a/index.html
+++ b/index.html
@@ -163,7 +163,129 @@
 
     </section>
 
-
+    <section>
+      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+        <!-- <p class="mb-2 text-xs font-semibold tracking-wide text-gray-600 uppercase sm:text-center">
+          20 Nov 2020
+        </p> -->
+        <div class="max-w-xl mb-5 md:mx-auto sm:text-center lg:max-w-2xl">
+          <div class="mb-4">
+            <a href="/" aria-label="Article" class="inline-block max-w-lg font-sans text-3xl font-extrabold leading-none tracking-tight text-black transition-colors duration-200 hover:text-deep-purple-accent-700 sm:text-4xl">
+              ACERCA DE NOSOTROS
+            </a>
+          </div>
+          <p class="text-base text-gray-700 md:text-lg">
+            Somos un equipo apasionado por la música, dedicados a compartir y promover diversos géneros y artistas. Únete a nosotros para descubrir nuevos sonidos y sumérgete en el maravilloso mundo de la música. ¡Siente el ritmo con nosotros!
+          </p>
+        </div>
+        <!-- <div class="mb-10 sm:text-center">
+          <a href="/" aria-label="Author" class="inline-block mb-1">
+            <img alt="avatar" src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" class="object-cover w-10 h-10 rounded-full shadow-sm" />
+          </a>
+          <div>
+            <a href="/" aria-label="Author" class="font-semibold text-gray-800 transition-colors duration-200 hover:text-deep-purple-accent-700">Vasile Melinte</a>
+            <p class="text-sm font-medium leading-4 text-gray-600">Author</p>
+          </div>
+        </div>
+        <div class="sm:text-center">
+          <a href="/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Read more</a>
+        </div> -->
+        <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+          <div class="grid gap-8 lg:grid-cols-3 sm:max-w-sm sm:mx-auto lg:max-w-full">
+            <div class="overflow-hidden transition-shadow duration-300 bg-white rounded shadow-sm">
+              <img src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/que-es-un-productor-musical-1024x683.jpg?alt=media&token=9c2ac505-0fd2-4ca5-b244-5aa034f08e99" class="object-cover w-full h-64" alt="" />
+              <div class="p-5 border border-t-0">
+                <p class="mb-3 text-xs font-semibold tracking-wide uppercase">
+                  <!-- <a href="/" class="transition-colors duration-200 text-blue-gray-900 hover:text-deep-purple-accent-700" aria-label="Category" title="traveling">traveling</a> -->
+                  <!-- <span class="text-gray-600">— 28 Dec 2020</span> -->
+                </p>
+                <a href="/" aria-label="Category" title="Visit the East" class="inline-block mb-3 text-2xl font-bold leading-5 transition-colors duration-200 hover:text-deep-purple-accent-700">MISIÓN</a>
+                <p class="mb-2 text-gray-700">
+                  Impulsamos la escena musical al promover apasionadamente a talentos emergentes, que van desde cantantes y DJs hasta músicos excepcionales. Nos esforzamos por establecer colaboraciones significativas con disqueras interesadas en participar en nuevas producciones musicales, brindando a los artistas la oportunidad de destacarse en escenarios importantes.
+                </p>
+                <!-- <a href="/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Learn more</a> -->
+              </div>
+            </div>
+            <div class="overflow-hidden transition-shadow duration-300 bg-white rounded shadow-sm">
+              <img src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/hombre-trabajando-musica-estudio-instrumentos.jpg?alt=media&token=f0f4f950-9eec-40f1-bcb2-683b5143126e" class="object-cover w-full h-64" alt="" />
+              <div class="p-5 border border-t-0">
+                <p class="mb-3 text-xs font-semibold tracking-wide uppercase">
+                  <!-- <a href="/" class="transition-colors duration-200 text-blue-gray-900 hover:text-deep-purple-accent-700" aria-label="Category" title="traveling">traveling</a>
+                  <span class="text-gray-600">— 28 Dec 2020</span> -->
+                </p>
+                <a href="/" aria-label="Category" title="Simple is better" class="inline-block mb-3 text-2xl font-bold leading-5 transition-colors duration-200 hover:text-deep-purple-accent-700">VISIÓN</a>
+                <p class="mb-2 text-gray-700">
+                  Aspiramos a ser el trampolín definitivo para nuevos talentos en la industria musical. Nos comprometemos a potenciar su presencia digital mediante la promoción activa en redes sociales y la facilitación de la creación de sus propias páginas web. Nuestra visión es proporcionar las herramientas y la exposición necesarias para impulsar y consolidar exitosamente las carreras de los artistas que apoyamos.
+                </p>
+                <!-- <a href="/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Learn more</a> -->
+              </div>
+            </div>
+            <div class="overflow-hidden transition-shadow duration-300 bg-white rounded shadow-sm">
+              <img src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/woman-play-guitar-write-musica-cancion-reheaesal.jpg?alt=media&token=10d92830-3c28-46f4-a354-ee2f0ce72bbf" class="object-cover w-full h-64" alt="" />
+              <div class="p-5 border border-t-0">
+                <p class="mb-3 text-xs font-semibold tracking-wide uppercase">
+                  <!-- <a href="/" class="transition-colors duration-200 text-blue-gray-900 hover:text-deep-purple-accent-700" aria-label="Category" title="traveling">traveling</a>
+                  <span class="text-gray-600">— 28 Dec 2020</span> -->
+                </p>
+                <a href="/" aria-label="Category" title="Film It!" class="inline-block mb-3 text-2xl font-bold leading-5 transition-colors duration-200 hover:text-deep-purple-accent-700">COMPROMISO ADICIONAL</a>
+                <p class="mb-2 text-gray-700">
+                  Además de nuestra misión y visión fundamentales, nos comprometemos a cultivar un entorno creativo y colaborativo. Fomentamos la diversidad musical y nos esforzamos por ser una plataforma inclusiva que celebra la innovación y la expresión artística en todas sus formas.
+                </p>
+               <!-- <a href="/" aria-label="" class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800">Learn more</a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+  
+  
+      <div class="max-w-xl mb-5 md:mx-auto sm:text-center lg:max-w-2xl">
+        <div class="mb-4">
+          <a href="/" aria-label="Article" class="inline-block max-w-lg font-sans text-3xl font-extrabold leading-none tracking-tight text-black transition-colors duration-200 hover:text-deep-purple-accent-700 sm:text-4xl">
+            NUESTRO EQUIPO DE TRABAJO
+          </a>
+        </div>
+        <!-- <p class="text-base text-gray-700 md:text-lg">
+          Somos un equipo apasionado por la música, dedicados a compartir y promover diversos géneros y artistas. Únete a nosotros para descubrir nuevos sonidos y sumérgete en el maravilloso mundo de la música. ¡Siente el ritmo con nosotros!
+        </p> -->
+      </div>
+      <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
+        <div class="grid gap-10 mx-auto sm:grid-cols-2 lg:grid-cols-3 lg:max-w-screen-lg">
+          <div>
+            <img class="object-cover w-24 h-24 rounded-full shadow" src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/Foto%20Carlos.jpeg?alt=media&token=a0ca7dc8-523c-4c4c-a935-ce2cc46f3ac7" alt="Person" />
+            <div class="flex flex-col justify-center mt-2">
+              <p class="text-lg font-bold">CARLOS SÁNCHEZ</p>
+              <p class="mb-4 text-xs text-gray-800">Product Manager</p>
+              <p class="text-sm tracking-wide text-gray-800">
+                Lidera la identificación y aplicación de las últimas tendencias del mercado. Colabora estrechamente con equipos de desarrollo y diseño para definir y ejecutar características clave. Su enfoque se basa en una visión clara del producto, estableciendo metas medibles y priorizando tareas para alcanzar objetivos comerciales. Utiliza análisis de datos para monitorear el rendimiento del sitio y recopilar feedback del usuario.
+              </p>
+            </div>
+          </div>
+          <div>
+            <img class="object-cover w-24 h-24 rounded-full shadow" src="https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="Person" />
+            <div class="flex flex-col justify-center mt-2">
+              <p class="text-lg font-bold">ALEJANDRA TAMAYO</p>
+              <p class="mb-4 text-xs text-gray-800">Design Team Lead</p>
+              <p class="text-sm tracking-wide text-gray-800">
+                Lidera el equipo de diseño para crear experiencias visuales cautivadoras y alineadas con las últimas tendencias del mundo musical. Colabora estrechamente con el Product Manager y otros departamentos para asegurar la coherencia y calidad del diseño en todas las plataformas. Alejandra traduce la visión del producto en interfaces atractivas y funcionales, garantizando una experiencia de usuario excepcional..
+              </p>
+            </div>
+          </div>
+          <div>
+            <img class="object-cover w-24 h-24 rounded-full shadow" src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/Nelson%20Carnet.jpeg?alt=media&token=f8a45dd6-7ab5-4926-93ba-88da5d211837" alt="Person" />
+            <div class="flex flex-col justify-center mt-2">
+              <p class="text-lg font-bold">NELSON FONNEGRA</p>
+              <p class="mb-4 text-xs text-gray-800">Music Director</p>
+              <p class="text-sm tracking-wide text-gray-800">
+                Aporta una profunda experiencia en armonía, ritmos y niveles de interpretación musical. Su papel abarca la investigación constante de nuevas agrupaciones musicales y la actualización del contenido del sitio para ofrecer lo último en la escena musical. Nelson no solo lidera la dirección musical, sino que también desempeña un papel clave en el diseño y la creación de música, mostrando su versatilidad como productor musical. Con una pasión innata por la innovación musical, Nelson Fonnegra lidera el equipo hacia la vanguardia de las tendencias, garantizando una experiencia auditiva única para nuestros usuarios..
+              </p>
+            </div>
+          </div>
+         
+        </div>
+      </div>
+     </section>
 
 
     <!-- Start pie de pagina -->
