--- a/aboutus.html
+++ b/aboutus.html
@@ -277,7 +277,7 @@
           </div>
         </div>
         <div>
-          <img class="object-cover w-24 h-24 rounded-full shadow" src="https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260" alt="Person" />
+          <img class="object-cover w-24 h-24 rounded-full shadow" src="https://firebasestorage.googleapis.com/v0/b/desarrollo-software-nelson.appspot.com/o/Foto%20Alejandra.jpeg?alt=media&token=bd58d2d6-7137-4a09-a818-84e32c82e952" alt="Person" />
           <div class="flex flex-col justify-center mt-2">
             <p class="text-lg font-bold">ALEJANDRA TAMAYO</p>
             <p class="mb-4 text-xs text-gray-800">Design Team Lead</p>
