--- a/aboutus.html
+++ b/aboutus.html
@@ -203,7 +203,7 @@
               <p class="font-medium tracking-wide text-gray-300">Contacto</p>
               <ul class="mt-2 space-y-2">
                 <li>
-                  <a href="/" aria-label="Ubicacion" title="Ubicacion" class="inline-flex items-center mr-8">
+                  <a href="#" aria-label="Ubicacion" title="Ubicacion" class="inline-flex items-center mr-8">
                     <svg class="h-8 w-8 text-teal-500" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                       stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                       <path stroke="none" d="M0 0h24v24H0z" />
@@ -217,7 +217,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="/" aria-label="telefono" title="telefono" class="inline-flex items-center mr-8">
+                  <a href="#" aria-label="telefono" title="telefono" class="inline-flex items-center mr-8">
                     <svg class="h-8 w-8 text-teal-500" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                       stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                       <path stroke="none" d="M0 0h24v24H0z" />
@@ -228,7 +228,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="/" aria-label="correo" title="correo" class="inline-flex items-center mr-8">
+                  <a href="#" aria-label="correo" title="correo" class="inline-flex items-center mr-8">
                     <svg class="h-8 w-8 text-teal-500" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
                       stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                       <path stroke="none" d="M0 0h24v24H0z" />
