--- a/index.html
+++ b/index.html
@@ -162,7 +162,13 @@
           </div>
 
     </section>
+    <!-- End cabecera -->
 
+    <!-- Start seccion Blog -->
+    <section>
+
+    </section>
+    <!-- End seccion Blog -->
 
 
 
@@ -183,19 +189,19 @@
                 <p class="font-medium tracking-wide text-gray-300">Contacto</p>
                 <ul class="mt-2 space-y-2">
                   <li>
-                    <a href="/" aria-label="Ubicacion" title="Ubicacion" class="inline-flex items-center mr-8">
+                    <a href="#" aria-label="Ubicacion" title="Ubicacion" class="inline-flex items-center mr-8">
                     <svg class="h-8 w-8 text-teal-500"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="18" y1="6" x2="18" y2="6.01" />  <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5" />  <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15" />  <line x1="9" y1="4" x2="9" y2="17" />  <line x1="15" y1="15" x2="15" y2="20" /></svg>
                     <span class="ml-2 text-sm  tracking-wide text-gray-500 ">Medellín, Antioquia</span>
                     </a>
                   </li>
                   <li>
-                    <a href="/" aria-label="telefono" title="telefono" class="inline-flex items-center mr-8">
+                    <a href="#" aria-label="telefono" title="telefono" class="inline-flex items-center mr-8">
                       <svg class="h-8 w-8 text-teal-500"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>
                     <span class="ml-2 text-sm  tracking-wide text-gray-500 ">+57 7890654</span>
                     </a>
                   </li>
                   <li>
-                    <a href="/" aria-label="correo" title="correo" class="inline-flex items-center mr-8">
+                    <a href="#" aria-label="correo" title="correo" class="inline-flex items-center mr-8">
                       <svg class="h-8 w-8 text-teal-500"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <rect x="3" y="5" width="18" height="14" rx="2" />  <polyline points="3 7 12 13 21 7" /></svg>
                     <span class="ml-2 text-sm  tracking-wide text-gray-500 ">vibranote@gmail.com</span>
                     </a>
