Se quitan redes sociales

--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
                 <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
                     <div class="relative flex items-center justify-between">
                         <div class="flex items-center">
-                            <a href="/" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
+                            <a href="index.html" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
                                 <img src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w" alt="logo">
                                 <!-- <span class="ml-2 text-xl font-bold tracking-wide text-gray-100 uppercase">VibraNote</span> -->
                             </a>
