--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
       <div class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
         <div class="relative flex items-center justify-between">
           <div class="flex items-center">
-            <a href="/" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
+            <a href="index.html" aria-label="Company" title="Company" class="inline-flex items-center mr-8">
               <img
                 src="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/logo.png?alt=media&token=b24eaad0-f382-44a2-967a-1e4e2055ab2f&_gl=1*fyob8d*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY0NDcuMjMuMC4w"
                 alt="logo">
@@ -398,14 +398,14 @@
                 </path>
               </svg>
             </a> -->
-            <a href="https://www.instagram.com/vibra_note/" class="text-gray-500 transition-colors duration-300 hover:text-teal-accent-400">
+            <!-- <a href="https://www.instagram.com/vibra_note/" class="text-gray-500 transition-colors duration-300 hover:text-teal-accent-400">
               <svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
                 <circle cx="15" cy="15" r="4"></circle>
                 <path
                   d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z">
                 </path>
               </svg>
-            </a>
+            </a> -->
             <!-- <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-teal-accent-400">
               <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
                 <path
