--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
   <title>VibraNote</title>
 </head>
 
-<body>
+<body  style="scroll-behavior: smooth ;">
   <!-- Start menu navegacion -->
   <header>
     <div class="bg-gray-900">
