--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>VibraNote</title>
 </head>
 
-<body>
+<body style="scroll-behavior: smooth ;">
     <!-- Start menu navegacion -->
     <header>
         <div class="bg-gray-900">
