--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/imagenes-dd8e6.appspot.com/o/iconomusica.png?alt=media&token=929219fa-2d1c-4314-9f44-21e295089378&_gl=1*r4fj76*_ga*MzAzMzU0MjM2LjE2OTQ2MTYwNDY.*_ga_CW55HF8NVT*MTY5ODg4NjQxMC4zMi4xLjE2OTg4ODY2NDQuMTMuMC4w" type="image/x-icon">
     <title>VibraNote</title>
 </head>
-<body>
+<body  style="scroll-behavior: smooth ;">
         <!-- Start menu navegacion -->
         <header>
             <div class="bg-gray-900">
